--- a/themes/minimal/layouts/index.html
+++ b/themes/minimal/layouts/index.html
@@ -3,13 +3,33 @@
 <main>
 
     <div class="intro">
+        <br>
+        <br>
+        <h2>Açude Epitácio Pessoa e sua história.</h2>
 
-        <h1>{{ .Site.Title }}</h1>
+        <p> O Açude Epitácio Pessoa, popularmente conhecido como Boqueirão, é uma represa localizada no município de Boqueirão,
+            estado brasileiro da Paraíba. Sua bacia se estende pelos municípios de Boqueirão, Cabaceiras e São Miguel de
+            Taipu e abastece as cidades paraibanas de Campina Grande, Boqueirão, Queimadas, Pocinhos, Caturité, Riacho de
+            Santo Antônio e Barra de São Miguel.
+        </p>
 
-        <h2>{{ markdownify .Site.Params.Description }}</h2>
+        <p> O açude tem ilhotas com residências particulares e é buscado para atividades como banho, pesca e passeios de barco,
+            sendo o acesso ao local possível a partir de Campina Grande através da PB-148. Além do abastecimento de água,
+            a represa produz peixes e camarões de água doce.
+        </p>
 
+        <p>
+            A represa foi construída pelo Dnocs entre os anos de 1951 e 1956, tendo sido inaugurada pelo presidente Juscelino Kubitschek
+            em janeiro de 1957. A sua inauguração consolidava assim a política de serviços hídricos do Governo Federal para
+            a região Nordeste, que foi sempre voltada à construção de grandes açudes, obras estas que eram apresentadas como
+            a solução definitiva para a deficiência hídrica da região, que pelo tamanho impressionava a população. Por isso
+            mesmo, eram as obras preferidas pelos políticos de todos os níveis.
+        </p>
+
+
+         <p>Aqui nesse link você poderá visualizar historicamente dados sobre o açude. <a href="https://rafaelo93.github.io/lab1-parte3/post/">aqui!</a>
+         </p>
     </div>
+        
 
 </main>
-
-{{ partial "footer" . }}
